# backend/cmd/v1-p2p-exchange-service/internal/interfaces/app/auth_response.go
@@ -1,13 +1,13 @@
 package app_interface
 
-type LoginUser struct {
+type AppLoginUserInfo struct {
 	ID      int64  `json:"id"`
 	Account string `json:"account"`
 	Name    string `json:"name"`
 }
 
-type LoginResponse struct {
-	AccessToken string    `json:"access_token"`
-	ExpireIn    int64     `json:"expireIn"`
-	User        LoginUser `json:"user"`
+type AppLoginResponse struct {
+	AccessToken string           `json:"access_token"`
+	ExpireIn    int64            `json:"expireIn"`
+	User        AppLoginUserInfo `json:"user"`
 }
