# backend/cmd/v1-p2p-exchange-service/internal/interfaces/backend/response.go
@@ -1,11 +1,11 @@
 package backend_interface
 
-type BackendLoginResponse struct {
+type LoginResponse struct {
 	Token     string `json:"token"`
 	ExpiresIn int64  `json:"expiresIn"`
 }
 
-type BackendDashboardResponse struct {
+type DashboardResponse struct {
 	Username string `json:"username"`
 	Role     string `json:"role"`
 }
